--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/asa"
+    android:background="@drawable/bg"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -13,43 +14,41 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="net.deepeshmakhijani.bpgclogin.MainActivity">
 
-    <TextView
+    <android.support.design.widget.TextInputLayout
         android:id="@+id/user_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:gravity="center"
-        android:text="Username"
-        android:textSize="20sp"
-        android:textStyle="normal" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="128dp">
 
-    <EditText
-        android:id="@+id/user_data"
+        <EditText
+            android:id="@+id/user_data"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Username"
+            android:inputType="textEmailAddress" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/pass_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_text"
-        android:textColor="@android:color/black" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:passwordToggleEnabled="false">
 
-    <TextView
-        android:id="@+id/pass_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/user_data"
-        android:gravity="center"
-        android:text="Password"
-        android:textSize="20sp"
-        android:textStyle="normal" />
-
-    <EditText
-        android:id="@+id/pass_data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/pass_text"
-        android:inputType="textPassword" />
+        <EditText
+            android:id="@+id/pass_data"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password"
+            android:inputType="textPassword" />
+    </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/login_btn"
-        android:layout_width="140dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/checkBox"
         android:layout_centerInParent="true"
@@ -61,12 +60,12 @@
 
     <Button
         android:id="@+id/logout_btn"
-        android:layout_width="130dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/login_btn"
         android:layout_centerInParent="true"
         android:layout_marginTop="5dp"
-        android:background="#00000000"
+        android:background="@drawable/logout_btn"
         android:elevation="4dp"
         android:text="Logout" />
 
@@ -76,8 +75,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/pass_data"
+        android:layout_below="@+id/pass_text"
         android:layout_marginTop="5dp"
-        android:text="Remember Username"
+        android:text="Remember Credentials"
         android:textSize="16sp" />
 </RelativeLayout>
