--- a/app/src/main/res/layout/content_settings_main.xml
+++ b/app/src/main/res/layout/content_settings_main.xml
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_delete_forever_black_24dp" />
+                android:src="@drawable/ic_delete_black_24dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -107,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/d2"
         android:layout_centerHorizontal="true"
-        android:text="Shubham Kumar : 9867140807"
+        android:text="Shubham Kumar"
         android:textColor="@android:color/black" />
 
     <TextView
@@ -116,7 +116,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/d3"
         android:layout_centerHorizontal="true"
-        android:text="Deepesh Makhijani : 9403813210"
+        android:text="Deepesh Makhijani"
         android:textColor="@android:color/black" />
 
     <TextView
@@ -126,7 +126,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="6dp"
-        android:text="Abhineet Nigam : 7744944182"
+        android:text="Abhineet Nigam"
         android:textColor="@android:color/black" />
 
 
