--- a/app/src/main/res/layout/set_default_item_format.xml
+++ b/app/src/main/res/layout/set_default_item_format.xml
@@ -20,7 +20,7 @@
         android:padding="12dp">
 
         <TextView
-            android:id="@+id/username_textview"
+            android:id="@+id/username_textview_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
@@ -29,61 +29,62 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/colon1"
+            android:id="@+id/colon1_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/username_textview"
+            android:layout_toRightOf="@+id/username_textview_new"
             android:padding="4dp"
             android:text=":"
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/username1"
+            android:id="@+id/username1_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/colon1"
+            android:layout_toRightOf="@+id/colon1_new"
             android:fontFamily="monospace"
             android:padding="4dp"
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/password_textview"
+            android:id="@+id/password_textview_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/username_textview"
+            android:layout_below="@+id/username_textview_new"
             android:padding="4dp"
             android:text="password"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/colon2"
+            android:id="@+id/colon2_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/username_textview"
-            android:layout_toRightOf="@+id/password_textview"
+            android:layout_below="@id/username_textview_new"
+            android:layout_toRightOf="@+id/password_textview_new"
             android:padding="4dp"
             android:text=":"
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/password1"
+            android:id="@+id/password1_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/username_textview"
-            android:layout_toRightOf="@+id/colon2"
+            android:layout_below="@+id/username_textview_new"
+            android:layout_toRightOf="@+id/colon2_new"
             android:fontFamily="monospace"
             android:padding="4dp"
             android:textSize="16sp" />
 
-        <ImageButton
-            android:id="@+id/deletebutton"
+        <RadioButton
+            android:id="@+id/radioButton2_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="#00000000"
-            android:src="@drawable/ic_delete_black_24dp" />
+            android:layout_marginRight="10dp" />
+
+        />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
