--- a/app/src/main/res/layout/login_widget.xml
+++ b/app/src/main/res/layout/login_widget.xml
@@ -1,16 +1,16 @@
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/widget_margin"
-    android:background="#55000000">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
 
     <Button
         android:id="@+id/actionButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_weight="1"
+        android:background="@drawable/widget_circle"
         android:text="LOGIN"/>
 
 </LinearLayout>
