--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -54,7 +54,7 @@
         android:layout_below="@+id/sd"
         android:layout_centerInParent="true"
         android:layout_marginTop="16dp"
-        android:background="@drawable/ripple"
+        android:background="@drawable/circle_button"
         android:elevation="4dp"
         android:text="Login"
         android:textSize="14sp" />
